Sumesh changes: Full event title display in header search,  Event Page "Sold Out" alignmet fixed, Business Layout Bug fixed

--- a/EventCombo/Content/AMaterial/header-footer.css
+++ b/EventCombo/Content/AMaterial/header-footer.css
@@ -95,21 +95,21 @@ img { max-width:100%; height:auto; display:block; margin-left:auto; margin-right
 
 body { font-family:'Roboto', sans serif; margin:0; padding:0;}
 header nav ul.nav { margin-top:15px;}
-#site-content { margin-top:100px; margin-left:20px;}
-.servererrorcode { text-align:center; font-size:50vw; color:#eeeeee; line-height:70vw; font-weight:700;}
-.servererrormessage { color:#FF0086; font-size:5vw; text-align:center; position:absolute; margin-top:-50%; padding:0 3vw; font-weight:700;}
-.servererrormessage p { font-size:2vw;}
-.servererrormessage p a { color:#00cafd;}
+#site-content { position:relative; padding:0 20px;}
+.servererrorcode { text-align:center; font-size:50vw; color:#eeeeee; line-height:50vw; font-weight:700;}
+.servererrormessage { width:100%; color:#FF0086; font-size:4.5vw; text-align:center; position:absolute; top:13vw; left:0; font-weight:700;}
+.servererrormessage p { font-size:2vw; font-weight:700;}
+.servererrormessage p a { color:#00cafd; font-weight:700;}
 .social img { display:inline-block; margin-right:10px; margin-bottom:-3px;}
 
 /*FOOTER CSS*/
-footer { position:relative; bottom:-20vh; right:0px; font-weight:400; line-height:1.4em;}
+footer { width:100%; display:inline-block; padding-bottom:150px; margin-top:30px; position:relative; font-weight:400; line-height:1.4em;}
 footer p { line-height:1.4em !important;}
 footer a { text-decoration:none; color:#0067a9;}
-.footer-right { bottom:100px; right:50px; position:absolute; max-width:calc(100% - 100px)}
-.footer-left { bottom:150px !important; left:50px; position:absolute;}
+.footer-right { height:145px; bottom:0; right:50px; position:absolute; max-width:calc(100% - 100px)}
+.footer-left { margin-left:50px;}
 .footer-left div { float:left; margin-left:3vw;}
-#footerlogo { text-align:center; width:100%; height:50vh; background:url(../../Images/AMaterial/EventComboLogo.svg) center no-repeat; background-size:700vh; overflow:hidden; background-position:40vh 0;}
+#footerlogo { text-align:center; width:100%; height:50vh; background:url(../../Images/AMaterial/EventComboLogo.svg) center no-repeat; background-size:700vh; overflow:hidden; background-position:40vh 0; position:absolute; left:0; bottom:-10px; z-index:-1;}
 .footerwhite { background:rgba(255, 255, 255, 0.5); width:100%; height:84%;}
 footer img { display:inline; margin-right:10px;}
 footer .social { margin-left:0px;}
@@ -119,9 +119,9 @@ footer .social { margin-left:0px;}
 .material-icons { vertical-align:middle; line-height:.8em;}
 .nav a, .nav li { color:#6b6b6b; text-decoration:none; font-weight:500; text-overflow:ellipsis;}
 .nav > li { display:inline-block; cursor:pointer;}
-.nav > li > li:hover { background:#ffffff;}
+.nav > li > li:hover { background:#fff;}
 .drop { position:relative;}
-.drop ul { position:absolute; -webkit-transition:height 0.3s; transition:height 0.3s; -webkit-transform:scale(0); transform:scale(0); -webkit-transform-origin:0 0; transform-origin:0 0; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12); background:#FFFFFF; padding-left:0px;}
+.drop ul { position:absolute; -webkit-transition:height 0.3s; transition:height 0.3s; -webkit-transform:scale(0); transform:scale(0); -webkit-transform-origin:0 0; transform-origin:0 0; box-shadow:0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12); background:#fff; padding-left:0px;}
 .drop ul li { display:block; width:100%;}
 .drop ul li a { width:100%; padding:1em 18px; display:inline-block; white-space:pre; box-sizing:border-box;}
 .drop ul li a:hover { background:#ebebeb;}
@@ -148,6 +148,7 @@ header.smaller nav { margin-top:0px;}
 #search div { width:100%;}
 #search md-autocomplete { background:none; height:36px;}
 #search md-autocomplete md-autocomplete-wrap { box-shadow:none; height:36px;}
+.md-autocomplete-suggestions li { padding:10px 15px; text-align:left; text-overflow:initial; white-space:initial; height:auto; line-height:normal;}
 #search md-content { background:none;}
 #search md-content i { color:#999; float:left; padding:0; line-height:35px;}
 #search input { color:#333; border:0; width:40%; font-size:100%; padding:0 6px; height:35px; line-height:35px;}
@@ -222,6 +223,11 @@ md-input-container label:not(._md-container-ignore).md-required:after { content:
 .scButton a.blue { background:#0077FD;}
 .scButton a.green { background:#00FD00;}
 .scButton a.sky { background:#00CAFD;}
+.sortLink { width:100%; display:inline-block; color:#ff2693; font:500 24px 'Roboto', Arial, Helvetica, sans-serif; text-align:center; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.sortLink a { display:inline-block; color:#ff2693; font:500 24px 'Roboto', Arial, Helvetica, sans-serif; cursor:pointer;}
+.sortLink a:hover { color:#000;}
+#clipboardMessage { width:100%; margin-bottom:15px; text-align:center; display:none;}
+#clipboardMessage span { display:inline-block; width:280px; max-width:100%; padding:10px; background:rgba(0,0,0,.5); color:#fff; font:600 11px/15px Arial, Helvetica, sans-serif; text-align:center; border-radius:2px; text-shadow:1px 1px 1px rgba(0,0,0,.4);}
 .max350 { max-width:350px;}
 .width160 { width:160px; margin-right:30px;}
 /****************************************************************************************************/
@@ -270,6 +276,8 @@ md-input-container label:not(._md-container-ignore).md-required:after { content:
 
 	.footer-left { display:none;}
 	.footer-right { font-size:2vw; font-weight:500; width:100vw; max-width:100vw; text-align:center; right:0px !important; padding:20px;}
+  #footerlogo { height:30vh;}
+  .sortLink, .sortLink a { font-size:18px;}
 }
 /* EC Styles -------------------------------------------------------------- */
 @media handheld, only screen and (max-width:490px), only screen and (max-device-width:490px) and (max-aspect-ratio:13/9)
@@ -306,3 +314,4 @@ md-input-container label:not(._md-container-ignore).md-required:after { content:
   .width160 { width:100%; margin-right:0;}
   .cntTitle { font-size:24px;}
   .scButton a { font-size:12px;}
+}
